--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--
+ ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".viewAnimation.ViewAnimationActivity"
+            android:label="@string/title_activity_view_animation"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".proprityAnimation.PropertyAnimationActivity"
+            android:label="@string/title_activity_property_animation"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".frameAnimation.FrameAnimationActivity"
+            android:label="@string/title_activity_frame_animation"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
